--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NODE_ENV = development
+NODE_ENV = production
 PORT = 3000
 MONGODB_URI = 'mongodb+srv://tang:Tang2002@cluster0.9vvlq.mongodb.net/domande_selecontrollo?retryWrites=true&w=majority'
