opa_key server side

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NODE_ENV = development
 PORT = 3000
 MONGODB_URI = 'mongodb+srv://tang:Tang2002@cluster0.9vvlq.mongodb.net/domande_selecontrollo?retryWrites=true&w=majority'
+OPA_KEY = b734a115782cc2c4b428f09c5d0a6d63
